--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,90 @@
+@import url('https://fonts.googleapis.com/css?family=DM+Sans:500,700&display=swap');
+
+* {
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body{
+  text-align: center;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  height: 100px;
+  width: 100%;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  padding: 0 20px;
+  background-image: url("https://www.toptal.com/designers/subtlepatterns/patterns/debut_light.png");
 }
 
-.App-link {
-  color: #61dafb;
+div {
+  width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+ul {
+  display: inline-flex;
+  position: relative;
+  overflow: hidden;
+  width: 80%;
+  background-color: #fff;
+  padding: 10px 20px;
+  border-radius: 40px;
+  box-shadow: 0 10px 40px rgba(159, 162, 177, .8);
+}
+
+li {
+  list-style: none;
+  margin: auto;
+  text-decoration: none;
+}
+
+
+a {
+  color: #83818c;
+  padding: 20px;
+  text-decoration: none;
+  transition: .3s;
+  margin: 0 6px;
+  z-index: 1;
+  font-family: 'DM Sans', sans-serif;
+  font-weight: 500;
+  position: relative;
+}
+
+a:before {
+   content: "";
+   position: absolute;
+   bottom: -6px;
+   left: 0;
+   width: 100%;
+   height: 5px;
+   background-color: #dfe2ea;
+   border-radius: 8px 8px 0 0;
+   opacity: 0;
+   transition: .3s;
+ }
+
+a:hover:before {
+  opacity: 1;
+  bottom: 0;
+}
+
+a:hover { color: cadetblue; }
+/*a:active { border-bottom: 3px solid #333333}*/
+
+.indicator {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  transition: .4s;
+  height: 5px;
+  z-index: 1;
+  border-radius: 8px 8px 0 0;
+}
+
+@media (max-width: 580px) {
+  ul { overflow: auto; }
 }
