--- a/src/App.css
+++ b/src/App.css
@@ -1,90 +1,32 @@
-@import url('https://fonts.googleapis.com/css?family=DM+Sans:500,700&display=swap');
-
-* {
-  box-sizing: border-box;
+label {
+    display: block;
+    margin-top: 10px;
 }
 
-.App {
-  text-align: center;
+.card-container.card {
+    max-width: 350px !important;
+    padding: 40px 40px;
 }
 
-
-body{
-  text-align: center;
-  display: flex;
-  height: 100px;
-  width: 100%;
-  justify-content: center;
-  align-items: center;
-  padding: 0 20px;
-  background-image: url("https://www.toptal.com/designers/subtlepatterns/patterns/debut_light.png");
+.card {
+    background-color: #f7f7f7;
+    padding: 20px 25px 30px;
+    margin: 0 auto 25px;
+    margin-top: 50px;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+    -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
 }
 
-div {
-  width: 100%;
-}
-
-ul {
-  display: inline-flex;
-  position: relative;
-  overflow: hidden;
-  width: 80%;
-  background-color: #fff;
-  padding: 10px 20px;
-  border-radius: 40px;
-  box-shadow: 0 10px 40px rgba(159, 162, 177, .8);
-}
-
-li {
-  list-style: none;
-  margin: auto;
-  text-decoration: none;
-}
-
-
-a {
-  color: #83818c;
-  padding: 20px;
-  text-decoration: none;
-  transition: .3s;
-  margin: 0 6px;
-  z-index: 1;
-  font-family: 'DM Sans', sans-serif;
-  font-weight: 500;
-  position: relative;
-}
-
-a:before {
-   content: "";
-   position: absolute;
-   bottom: -6px;
-   left: 0;
-   width: 100%;
-   height: 5px;
-   background-color: #dfe2ea;
-   border-radius: 8px 8px 0 0;
-   opacity: 0;
-   transition: .3s;
- }
-
-a:hover:before {
-  opacity: 1;
-  bottom: 0;
-}
-
-a:hover { color: cadetblue; }
-/*a:active { border-bottom: 3px solid #333333}*/
-
-.indicator {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  transition: .4s;
-  height: 5px;
-  z-index: 1;
-  border-radius: 8px 8px 0 0;
-}
-
-@media (max-width: 580px) {
-  ul { overflow: auto; }
+.profile-img-card {
+    width: 96px;
+    height: 96px;
+    margin: 0 auto 10px;
+    display: block;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
 }
